# Tao-43

./: .gitignore  colab_train.ipynb  configs.yaml  core_models.py  environment.py  latent_planner.py  main.py  pyproject.toml  readme.md  trainer_engine.py  utils.py
runs/oracle_demo/detour_latest/: metrics.csv  summary.html
runs/oracle_demo/detour_smoke/: metrics.csv  summary.html
runs/oracle_demo/latent_only_detour/: metrics.csv  summary.html
runs/oracle_demo/latent_only_diagnostic/: metrics.csv  summary.html
runs/oracle_demo/latent_only_open_loop/: metrics.csv  summary.html
runs/oracle_demo/smoke/: metrics.csv  summary.html
scripts/: verify_env.py
tests/: test_rollback_env.py  test_task_registry.py
vjepa_gym/: __init__.py
vjepa_gym/data/: __init__.py
vjepa_gym/env/: __init__.py  base_rollback_env.py
vjepa_gym/env/tasks/: __init__.py  base_task.py  smoke_detour.py
