[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vjepa-gym"
version = "0.2.0"
description = "Six-file VJEPA-Gym prototype with rollback MuJoCo state and latent CEM planning."
readme = "readme.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dm-control>=1.0.20",
    "einops>=0.8.0",
    "h5py>=3.10.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.1",
    "mujoco>=3.1.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "timm>=1.0.0",
    "torch==2.11.0+cu130",
    "torchvision==0.26.0+cu130",
]

[tool.setuptools]
py-modules = [
    "core_models",
    "environment",
    "latent_planner",
    "trainer_engine",
    "main",
]

[tool.uv]
python-preference = "managed"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
